# hwinfo

./: CMakeLists.txt
examples/: CMakeLists.txt  system_infoMain.cpp
include/hwinfo/opencl/: device.h
src/opencl/: CMakeLists.txt
src/windows/: gpu.cpp
